--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
     "react": "^16.4.0",
