--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
+    "numbro": "^2.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-flexbox-grid": "^2.1.2",
