--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
+    "numbro": "^2.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "styled-components": "^3.3.2"
