--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 cache:
   directories:
     - "node_modules"
-script: npm test
+script: npm build
 before_deploy: npm -g install now --no-save
 deploy:
   - provider: script
