--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint": "eslint .",
     "lintfix": "eslint . --fix",
     "precommit": "lint-staged",
-    "postcommit": "git update-index -g"
+    "postcommit": "git update-index -g",
+    "now-build": "echo 'Built on Travis CI'"
   },
   "lint-staged": {
     "*.{js,jsx,css,html}": [
