--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ node_js:
 cache:
   directories:
     - "node_modules"
-script: yarn build
+script:
+  - yarn
+  - yarn build
 before_deploy: npm -g install now --no-save
 deploy:
   - provider: script
