--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ node_js:
 cache:
   directories:
     - "node_modules"
-script: npm run build
 before_deploy: npm -g install now --no-save
 deploy:
   - provider: script
-    script: now --public --token $NOW_TOKEN ./build && now alias --token $NOW_TOKEN
+    script: now --public --token $NOW_TOKEN && now alias --token $NOW_TOKEN
     skip_cleanup: true
     on:
       all_branches: true
