--- a/now.json
+++ b/now.json
@@ -1,4 +1,5 @@
 {
   "name": "twitter-demo-frontend",
-  "alias": "twitter-demo-frontend.now.sh"
+  "alias": "twitter-demo-frontend.now.sh",
+  "files": ["package.json", "yarn.lock"]
 }
