--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
+language: node_js
+node_js:
+  - "node"
 branches:
   only:
     - master
     - /^feat\/.*$/
-language: node_js
-node_js:
-  - "node"
 cache:
   yarn: true
   directories:
     - "node_modules"
-before_script: echo "Deploying $TRAVIS_BRANCH branch"
+before_script:
+  - echo "Deploying $TRAVIS_BRANCH branch"
 script: yarn build
 before_deploy: npm -g install now
 deploy:
