try use correct branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ cache:
   yarn: true
   directories:
     - "node_modules"
-before_script: echo "Deploying $TRAVIS_BRANCH branch"
+before_script: |
+  echo "Deploying $TRAVIS_BRANCH branch"
+  echo "Replacment ${TRAVIS_BRANCH//\//-}"
 script: yarn build
 before_deploy: npm -g install now
 deploy:
@@ -21,8 +23,7 @@ deploy:
     on: master
   - provider: script
     script: >
-      now --public --name twitter-demo-frontend --token $NOW_TOKEN ./build &&
-      now alias twitter-demo-frontend-scrat98-${TRAVIS_BRANCH//\//-/}.now.sh --token $NOW_TOKEN
+      now --public --name twitter-demo-frontend --token $NOW_TOKEN ./build
     skip_cleanup: true
     on:
       all_branches: true
