--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@ cache:
   yarn: true
   directories:
     - "node_modules"
-before_script: |
-  echo "Deploying $TRAVIS_BRANCH branch"
-  echo "Replacment ${TRAVIS_BRANCH//\//-}"
 script: yarn build
 before_deploy: npm -g install now
 deploy:
@@ -22,10 +19,10 @@ deploy:
     skip_cleanup: true
     on: master
   - provider: script
-    script: |
-      FEAT_NAME="${TRAVIS_BRANCH//\//-}"
-      echo $FEAT_NAME
-      now --public --name twitter-demo-frontend --token $NOW_TOKEN ./build && now alias twitter-demo-frontend-scrat98-$FEAT_NAME.now.sh --token $NOW_TOKEN
+    script:
+      - export FEAT_NAME="${TRAVIS_BRANCH//\//-}"
+      - echo $FEAT_NAME
+      - now --public --name twitter-demo-frontend --token $NOW_TOKEN ./build && now alias twitter-demo-frontend-scrat98-$FEAT_NAME.now.sh --token $NOW_TOKEN
     skip_cleanup: true
     on:
       all_branches: true
