Revert to the previous state due to github error

--- a/package.json
+++ b/package.json
@@ -21,18 +21,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lintfix": "eslint . --fix",
-    "precommit": "lint-staged",
-    "postcommit": "git update-index -g"
-  },
-  "lint-staged": {
-    "*.{js,jsx,css,html}": [
-      "yarn lintfix",
-      "git add"
-    ]
+    "lintfix": "eslint . --fix"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.5",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -40,8 +31,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.9.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
     "prettier": "^1.13.5"
   }
 }
