--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,11 @@
 {
-  "parser": "babel-eslint",
-  "extends": ["airbnb", "prettier", "prettier/react"],
-  "plugins": ["prettier", "react"],
+  "extends": ["airbnb", "prettier/react"],
+  "plugins": ["prettier"],
   "env": {
     "browser": true
   },
   "rules": {
     "react/jsx-filename-extension": [0, { "extensions": [".js"] }],
-    "prettier/prettier": "error",
-    "react/prop-types": 0,
-    "jsx-a11y/anchor-is-valid": [
-      "error",
-      { "components": ["Link"], "specialLink": ["to"] }
-    ]
+    "prettier/prettier": "error"
   }
 }
