--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint .",
     "lintfix": "eslint . --fix",
     "precommit": "flow check && lint-staged",
-    "postcommit": "git update-index -g"
+    "postcommit": "git update-index -g",
     "now-build": "echo 'Built on Travis CI'"
   },
   "lint-staged": {
